@@ -22,6 +22,10 @@
 
 #include <string.h>
 
+#ifdef HAVE_WINDOWS_H
+#  include <direct.h> /* For chdir */
+#endif
+
 #include "bresource.h"
 #include "bnetwork.h"
 #include "bio.h"
@@ -66,6 +70,17 @@ main(int argc, const char **argv)
 
     /* initialize progname for run-tim resource finding */
     bu_setprogname(argv[0]);
+
+    /* Change the working directory to BU_DIR_HOME if we are invoking
+     * without any arguments. */
+    if (argc == 1) {
+	const char *homed = bu_dir(NULL, 0, BU_DIR_HOME, NULL);
+	if (homed && chdir(homed)) {
+	    bu_exit(1, "Failed to change working directory to \"%s\" ", homed);
+	}
+    }
+
+    /* initialize Tcl args */
     bu_vls_sprintf(&tcl_cmd, "set argv0 %s", argv[0]);
     (void)Tcl_Eval(interp, bu_vls_addr(&tcl_cmd));
     bu_vls_sprintf(&tcl_cmd, "set ::no_bwish 1");
