@@ -949,12 +949,10 @@ main(int argc, char **argv)
     int need_help_dev = 0;
     int uac = 0;
 
-    struct bu_vls wdir = BU_VLS_INIT_ZERO;
-
     struct bu_vls optparse_msg = BU_VLS_INIT_ZERO;
     struct bu_vls info_msg = BU_VLS_INIT_ZERO;
     struct rtwizard_settings *s = rtwizard_settings_create();
-    struct bu_opt_desc d[36];
+    struct bu_opt_desc d[35];
 
     BU_OPT(d[0],  "h", "help",          "",          NULL,            &need_help,    "Print help and exit");
     BU_OPT(d[1],  "",  "help-dev",      "",          NULL,            &need_help_dev,    "Print options intended for developer/programmatic use and exit.");
@@ -990,12 +988,20 @@ main(int argc, char **argv)
     BU_OPT(d[31], "v", "verbose",       "#",         &bu_opt_int,     &s->verbose,      "Verbosity");
     BU_OPT(d[32], "",  "log-file",      "filename",  &bu_opt_vls,     s->log_file,      "Log debugging output to this file");
     BU_OPT(d[33], "",  "pid-file",      "filename",  &bu_opt_vls,     s->pid_file,      "File used to communicate PID numbers (for app developers)");
-    BU_OPT(d[34], "",  "working-dir",   "path",   &bu_opt_vls,     &wdir,      "Specify a working directory");
-    BU_OPT_NULL(d[35]);
+    BU_OPT_NULL(d[34]);
 
     /* initialize progname for run-time resource finding */
     bu_setprogname(argv[0]);
     av0 = argv[0];
+
+    /* Change the working directory to BU_DIR_HOME if we are invoking
+     * without any arguments. */
+    if (argc == 1) {
+	const char *homed = bu_dir(NULL, 0, BU_DIR_HOME, NULL);
+	if (homed && chdir(homed)) {
+	    bu_exit(1, "Failed to change working directory to \"%s\" ", homed);
+	}
+    }
 
     /* Skip first arg */
     argv++; argc--;
@@ -1016,18 +1022,6 @@ main(int argc, char **argv)
 	rtwizard_help_dev((struct bu_opt_desc *)&d);
 	bu_exit(EXIT_SUCCESS, NULL);
     }
-
-    if (bu_vls_strlen(&wdir)) {
-	/* Make sure '~' is always interpreted as the home directory */
-	if (BU_STR_EQUAL(bu_vls_cstr(&wdir), "~")) {
-	    const char *homed = bu_dir(NULL, 0, BU_DIR_HOME, NULL);
-	    bu_vls_sprintf(&wdir, "%s", homed);
-	}
-	if (chdir(bu_vls_cstr(&wdir))) {
-	    bu_exit(EXIT_FAILURE, "Failed to change working directory to \"%s\" ", bu_vls_cstr(&wdir));
-	}
-    }
-    bu_vls_free(&wdir);
 
     {
 	int stop = 0;
